[package]
name = "learn_warp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.2", features = ["full"]}
warp = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
handle-errors = { path = "handle-errors" }
log = "0.4.17"
env_logger = "0.10.0"
uuid = { version = "0.8", features = ["v4"] } # use to genrate unique id
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# surrealdb = "1.0.0-beta.8"
# For smaller dependencies
surrealdb = {version = "1.0.0-beta.8", default-features=false, features = ['parallel', 'kv-mem'] }


